# opensea-jsonformat

./: .editorconfig  BUILDING.md  CONTRIBUTING.md  README.md  meson.build  meson.format  meson_options.txt  opensea-jsonformat-doxygen-generator
Make/: buildjsonc.sh
Make/VS.2017/opensea-jsonformat/opensea-jsonformat/: opensea-jsonformat.vcxproj  opensea-jsonformat.vcxproj.filters
Make/VS.2019/opensea-jsonformat/opensea-jsonformat/: opensea-jsonformat.vcxproj  opensea-jsonformat.vcxproj.filters
Make/VS.2022/opensea-jsonformat/opensea-jsonformat/: opensea-jsonformat.vcxproj  opensea-jsonformat.vcxproj.filters
Make/gcc/: Makefile  buildjsonc.sh
Make/gccWin/: Makefile.gccWin
include/: cdl_json.h  cpp.hint  device_statistics_json.h  drive_information_json.h  dst_json.h  error_lba_json.h  farm_json.h  jsonformat_common.h  opensea_jsonformat_version.h  scan_json.h  scsi_defect_list_json.h  smart_attribute_json.h
src/: cdl_json.c  device_statistics_json.c  drive_information_json.c  dst_json.c  error_lba_json.c  farm_json.c  jsonformat_common.c  scan_json.c  scsi_defect_list_json.c  smart_attribute_json.c
subprojects/: json-c.wrap
