option('cc-suggest-attribute', type : 'boolean', value : false, description : 'Enable warnings where the compiler can suggest various attributes to be applied to functions for optimization and correctness.')
option('build_timestamp', type: 'string', value: '', description: 'Build timestamp for reproducible builds (passed from parent project)')
option('use_system_json', type : 'boolean', value : false, description : 'Try to use system-installed json-c library instead of bundled subproject. Will attempt pkg-config, then find_library, then fallback to subproject if both fail.')
