option('cc-suggest-attribute', type : 'boolean', value : false, description : 'Enable warnings where the compiler can suggest various attributes to be applied to functions for optimization and correctness.')
option('build_timestamp', type: 'string', value: '', description: 'Build timestamp for reproducible builds (passed from parent project)')
option('use_system_json', type : 'boolean', value : false, description : 'Use system-installed json-c library. If false (default), builds json-c from bundled subproject. When true, requires system json-c headers to be installed.')
